@@ -1,3 +1,9 @@
+2002-03-28  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* terms.c (set_tty): s/term_info/w3m_term_info/g;
+		struct term_info is defined in FreeBSD's sys/consio.h
+		reported by KOIE Hidetaka <hide@koie.org>
+
 2002-03-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03146] Re: header option
